<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="second_currency_type">Second currency type</string>
    <string name="second_currency_number">Second currency number</string>
    <string name="first_currency_type">First currency type</string>
    <string name="first_currency_number">First currency number</string>
    <string name="_1_00">1.00</string>
    <string name="open_history">Open history</string>
    <string name="clear">Clear</string>
    <string name="count">Count!</string>
    <string name="default_currency_number">0.00</string>
    <string name="network_connection_error_title">Network error</string>
    <string name="network_connection_error_cancel">Cancel</string>
    <string name="network_connection_error_action">Try again</string>
    <string name="history_fragment">History fragment</string>
    <string name="first_currency_number_is_empty">field \"First currency number\" is empty!</string>
    <string name="currencies_are_invalid_for_current_date">currencies are invalid for current date!</string>
    <string name="currency_conversion_deleted">Currency conversion deleted</string>

    <string-array name="currencyTypes">
        <item>USD</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>GBP</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>MYR</item>
        <item>BGN</item>
        <item>TRY</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>MXN</item>
        <item>SGD</item>
        <item>AUD</item>
        <item>ILS</item>
        <item>KRW</item>
        <item>PLN</item>
    </string-array>
</resources>