<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_history_fragment"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history_fragment"
        app:showAsAction="ifRoom" />
</menu>